change shape of all skills

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,6 @@ djsite/.idea/misc.xml
 djsite/.idea/inspectionProfiles/profiles_settings.xml
 djsite/.idea/djsite.iml
 djsite/.idea/djsite.iml
+djsite/.idea/inspectionProfiles/Project_Default.xml
+djsite/.idea/workspace.xml
+djsite/.idea/workspace.xml
